[package]
name = "simple-sds"
version = "0.3.1"
authors = ["Jouni Siren <jouni.siren@iki.fi>"]
edition = "2021"
description = "Basic succinct data structures."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/simple-sds"

[features]
binaries = ["getopts", "rand"]

[dependencies]
getopts = { version = "0.2", optional = true }
libc = "0.2"
rand = { version = "0.8", optional = true }
serde =  {version = ">=1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "bv-benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "wm-benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false
